--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   upload:
-    xls:
+    tab:
       has_attached_file_options:
         path: ":rails_root/public/system/:attachment/:id/:style/:filename"
 
@@ -10,7 +10,7 @@ development:
 test:
   <<: *defaults
   upload:
-    xls:
+    tab:
       has_attached_file_options:
         path: ":rails_root/tmp/system/:attachment/:id/:style/:filename"
 
