Changed mysql socket for production.

--- a/config/database.yml
+++ b/config/database.yml
@@ -36,7 +36,8 @@ production:
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+# socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
 
 cucumber:
   <<: *test
