Changed password for db on production.

--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ production:
   database: abn-amro-on-rails_production
   pool: 5
   username: root
-  password:
+  password: root
 # socket: /tmp/mysql.sock
   socket: /var/run/mysqld/mysqld.sock
 
