--- a/config/application.yml
+++ b/config/application.yml
@@ -32,7 +32,7 @@ production:
   upload:
     tab:
       has_attached_file_options:
-        storage: ":s3"
+        storage: s3
         bucket: 'abn-amro-on-rails'
         path: "public/system/:attachment/:id/:style/:filename"
         s3_credentials: *s3_credentials
